[package]
name = "arro3-io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Rust-based readers and writers for Arrow in Python."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_io"
crate-type = ["cdylib"]

[features]
default = ["async"]
# Include async code. This feature won't compile for pyodide.
async = [
    "dep:pyo3-object_store",
    "dep:pyo3-async-runtimes",
    "parquet/object_store",
    "dep:object_store",
    "dep:futures",
]

[dependencies]
